--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<%= link_to destroy_admin_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Do you want to logout?'} do %>
+  <span>Sign out</span>
+<% end %>
