--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,9 +33,15 @@
                     <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
                   </li>
                 </ul>
-                <div class="py-1">
-                  <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign out</a>
-                </div>
+                <% if admin_user_signed_in? %>
+                  <div class="py-1">
+                    <%= link_to 'Sign Out', destroy_admin_user_session_path, data: {turbo_method: :delete, turbo_confirm: 'Do you want to logout?'} , class:"block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"%>
+                  </div>
+                <% else %>
+                  <div class="py-1">
+                    <%= link_to 'Sign In', new_admin_user_session_path, class:"block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"%>
+                  </div>                  
+                <% end %>
             </div>
         </li>
         <li>
